--- a/_config.yml
+++ b/_config.yml
@@ -57,13 +57,11 @@ plugins:
 # 站点基本信息
 title: "奇怪的小马维基"
 description: "分享小马知识、技术文章和兴趣爱好的个人网站"
-url: "https://kerybotu.github.io" # 替换为你的实际 URL
-baseurl: "" # 如果使用自定义域名或子路径，调整此项
+url: "https://kerybotu.github.io"
+baseurl: "" # 如果使用子路径，调整此项
 
-# GitHub Pages 设置
-theme: minima # 默认主题，可根据需要更改
+# Jekyll 设置
+theme: minima
 plugins:
-  - jekyll-sitemap # 自动生成 sitemap.xml
-
-# 如果使用 /docs 文件夹
-source: wiki
+  - jekyll-sitemap  # 生成站点地图
+  - jekyll-feed    # 生成 RSS 订阅
