--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ description: "分享小马知识、技术文章和兴趣爱好的个人网站"
 url: "https://kerybotu.github.io"  # 更新为实际域名
 baseurl: ""  # 保持为空，除非使用子路径
 theme: minima  # 如果不需要 minima，可删除
+author: "奇怪的小马维基"
 permalink: /:path/:basename
 plugins:
   - jekyll-sitemap
